# pygame_tactics_test

./: CONTRIBUTING.md  Claude.md  IMAGE_ASSIGNMENT_SUMMARY.md  PLAN.md  README.md  SESSION_SUMMARY.md  TOOLTIP_FIX_SUMMARY.md  config.py  main.py  pyproject.toml
assets/images/investigators/male/: priest.png.import
assets/json/: names_data.json
combat/: __init__.py  battle_screen.py  combat_resolver.py  enemy_ai.py  grid.py  line_of_sight.py  pathfinding.py  terrain_generator.py
docs/: 01_pygame_fundamentals.md  02_architecture_overview.md  03_ui_components.md  04_data_flow.md  05_grid_and_battle_system.md  06_stat_system.md  07_action_points_system.md  08_terrain_tooltip_system.md  09_equipment_system.md  10_enemy_ai_system.md  11_combat_deck_system.md  12_attack_system.md  ATTACK_POPUP_REDESIGN.md  SESSION_15_DOCUMENTATION_UPDATES.md  SESSION_16_COMBAT_CARD_FIX.md  SESSION_17_COMPLETE.md  SESSION_17_SUMMARY.md  doc_index.md  session_archive.md
entities/: __init__.py  combat_deck.py  enemy.py  equipment.py  investigator.py  unit.py
testing/: test_action_points.py  test_attack_popup.py  test_bug_fixes.py  test_combat_deck.py  test_combat_quick.py  test_combat_resolution.py  test_diagonal_movement.py  test_enemy_ai.py  test_enemy_attacks.py  test_enemy_movement.py  test_enemy_movement_fix.py  test_equipment.py  test_first_turn_fix.py  test_image_assignment.py  test_miss_analysis.py  test_movement.py  test_movement_distance_clarification.py  test_names.py  test_popup.py  test_stat_system.py  test_terrain_generation.py  test_tooltip.py  test_tooltip_integration.py  test_turn_order.py
ui/: __init__.py  settings_screen.py  title_screen.py  ui_elements.py
